--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </style>
     </head>
     <body>
-        <meta http-equiv="refresh" content="2;URL=http://127.0.0.1:5500/Portfolio/landing.html">
+        <meta http-equiv="refresh" content="2;URL=https://abadias618.github.io/Portfolio/landing.html">
         
         <img class="animate__animated animate__fadeIn" src="logo.png" alt="logo">
     </body>
