--- a/landing.html
+++ b/landing.html
@@ -124,9 +124,9 @@
             <h1 class="display-4 animate__animated animate__fadeInUp animate__delay-4s">Creator</h1>
             <hr>
             <div class="container-fluid social animate__animated animate__fadeInUp">
-                <a href="#"><i class="fab fa-github"></i></a>
-                <a href="#"><i class="fas fa-envelope"></i></a>
-                <a href="#"><i class="fab fa-linkedin"></i></a>
+                <a href="https://github.com/abadias618"><i class="fab fa-github"></i></a>
+                <a href="mailto: abadias@byui.edu"><i class="fas fa-envelope"></i></a>
+                <a href="https://www.linkedin.com/in/albertobaldiviezo/"><i class="fab fa-linkedin"></i></a>
             </div>
         </div>
         
