more main page fixes

--- a/landing.html
+++ b/landing.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Abdias'B-Portfolio</title>
+    <title>AbdiasB.- Software Engineer</title>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
     <!-- jQuery library -->
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css">
     <!--My css-->
     <link rel="stylesheet" href="index.css">
-
+    <script>console.log("hello");</script>
 </head>
 
 <body>
@@ -83,7 +83,7 @@
                 </div>
             </div>
             <div class="row container-fluid">
-                <a href="#" class="btn btn-primary mx-auto"> My Resume</a>
+                <a href="ABaldiviezoResume.pdf" class="btn btn-primary mx-auto" target="_blank"> My Resume</a>
             </div>
         </div>
 
@@ -129,34 +129,97 @@
                 <a href="https://www.linkedin.com/in/albertobaldiviezo/"><i class="fab fa-linkedin"></i></a>
             </div>
         </div>
-        
     </div>
-    <hr>
-    <hr>
+    <br>
+    <br>
     <!--Jumbotron-->
-    <div class="jumbotron col-lg-8 col-md-8">
-        <p class="lead">"Imagination will often carry us to worlds that never were. But without it, we go
-            nowhere."
-            Carl Sagan</p>
-        <br>
+    <div class="jumbotron col-12">
+        <p class="lead">"By small and simple things are great things brought to pass..." (Alma)</p>
+        <hr>
+        <h4 class="text">
+            I love to build, make , craft software.<br>
+            I have done many different things throughout this ongoing learning process,
+            some of them are: web development, android applications, algorithm studies, 
+            machine learning, computer vision, data science, and more.
+        </h4>
     </div>
+    <br>
+    <br>
     <!--Three Column Section-->
     <div class="container-fluid padding">
-        <div class="row tex-center padding">
+        <div class="row text-center padding">
             <div class="col-xs-12 col-sm-6 col-md-4">
                 <i class="fas fa-pencil-alt"></i>
-                <h3>Proficient in Drawing</h3>
-                <p>Mentioned at the Pedro Domingo Murillo Art Contest</p>
+                <h3>Education</h3>
+                <a href="https://www.ldsbc.edu/">LDS Business College</a>
+                <p>AAS Software Development</p>
+                <a href="https://www.byui.edu/">Brigham Young University - Idaho</a>
+                <p>BS Software Engineering</p>
             </div>
             <div class="col-xs-12 col-sm-6 col-md-4">
                 <i class="fas fa-archway"></i>
-                <h3>Proficient in Design</h3>
-                <p>Graphical Design Skills<p>
+                <h3>Experience</h3>
+                <a href="https://www.google.com/maps/dir/43.810816,-111.788032/Lowell+G.+Biddulph+Building,+525+S+Center+St,+Rexburg,+ID+83460/@43.8142691,-111.7910278,16z/data=!3m1!4b1!4m9!4m8!1m1!4e1!1m5!1m1!1s0x53540b011b767fab:0x428b2d1e7390b39c!2m2!1d-111.7852197!2d43.8170801">BYU-Idaho Business Solutions</a>
+                <p>Maintanance and Production of Software, Data Analytics, Reports Processing</p>
+                <a href="https://www.ldsbc.edu/bookstore">LDSBC Bookstore</a>
+                <p>Financial Data Processing, Customer Service</p>     
             </div>
             <div class="col-sm-12 col-md-4">
                 <i class="fas fa-paint-brush"></i>
-                <h3>Proficient in Painting</h3>
-                <p>Over 100 pieces of art</p>
+                <h3>Skills</h3>
+                <p>Java, Javascript, Python, C++, R, PHP, Git</p>
+                <br>
+                <p>Node.js, Maven, Gradle, JUnit, Linux(RHEL), Bootstrap, HTML-CSS-SASS, MSSQL-PostegreSQL</p>
+            </div>
+        </div>
+        <hr class="my-4">
+    </div>
+    <br>
+    <br>
+    <!--Another subtitle-->
+    <div class="container-fluid padding">
+        <div class="row welcome text-center">
+            <div class="col-12">
+                <h1 class="display-4">Example Projects</h1>
+            </div>
+        </div>
+    </div>
+    <hr>
+    <br>
+    <!--Card Style-->
+    <div class="container-fluid padding">
+        <div class="row padding">
+            <div class="col-md-4">
+                <div class="card">
+                    <img class="card-img-top" src="cholita.PNG">
+                    <div class="card-body">
+                        <h4 class="card-title">Number of Fingers Recognition</h4>
+                        <p class="card-text">Count the number of fingers you are holding up and
+                            perform basic OS commands based upon that (Python-OpenCV-Numpy...)
+                        </p>
+                        <a href="#" class="btn btn-outline-secondary">View</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <img class="car-img-top" src="Jesus.PNG">
+                    <div class="card-body">
+                        <h4 class="card-title">Jesus</h4>
+                        <p class="card-text"></p>
+                        <a href="#" class="btn btn-outline-secondary">View</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <img class="car-img-top" src="cryingboy.PNG">
+                    <div class="card-body">
+                        <h4 class="card-title">Others</h4>
+                        <p class="card-text"></p>
+                        <a href="#" class="btn btn-outline-secondary">View</a>
+                    </div>
+                </div>
             </div>
         </div>
         <hr class="my-4">
@@ -183,48 +246,7 @@
         </div>
     </div>
     <hr class="my-4">
-    <!--Another subtitle-->
-    <div class="container-fluid padding">
-        <div class="row welcome text-center">
-            <div class="col-12">
-                <h1 class="display-4">More Galleries...</h1>
-            </div>
-            <hr>
-        </div>
-    </div>
-    <!--Card Style-->
-    <div class="container-fluid padding">
-        <div class="row padding">
-            <div class="col-md-4">
-                <div class="card">
-                    <img class="card-img-top" src="cholita.PNG">
-                    <div class="card-body">
-                        <h4 class="card-title">Faces</h4>
-                        <a href="#" class="btn btn-outline-secondary">View</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card">
-                    <img class="car-img-top" src="Jesus.PNG">
-                    <div class="card-body">
-                        <h4 class="card-title">Jesus</h4>
-                        <a href="#" class="btn btn-outline-secondary">View</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card">
-                    <img class="car-img-top" src="cryingboy.PNG">
-                    <div class="card-body">
-                        <h4 class="card-title">Others</h4>
-                        <a href="#" class="btn btn-outline-secondary">View</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <hr class="my-4">
-    </div>
+    
     <!--Bottom links-->
     <div class="container-fluid padding">
         <div class="row text-center padding">
