--- a/landing.html
+++ b/landing.html
@@ -35,11 +35,11 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active animate__animated animate__fadeInUp">
-                        <a class="nav-link " href="#">Home</a>
+                        <a class="nav-link" href="#">&ltHome/&gt</a>
                     </li>
                     <li class="nav-item dropdown animate__animated animate__fadeInUp">
                         <a class="nav-link dropdown-toggle" href="skills.html" id="navbardrop" data-toggle="dropdown">
-                            Skills & Projects
+                            &ltSkills & Projects/&gt
                         </a>
                         <div class="dropdown-menu">
                             <a class="dropdown-item" href="#">Java</a>
@@ -52,10 +52,10 @@
                         </div>
                     </li>
                     <li class="nav-item animate__animated animate__fadeInUp">
-                        <a class="nav-link" href="articles.html">Articles</a>
+                        <a class="nav-link" href="articles.html">&ltArticles/&gt</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link animate__animated animate__fadeInUp" href="#footer">Contact</a>
+                        <a class="nav-link animate__animated animate__fadeInUp" href="#footer">&ltContact/&gt</a>
                     </li>
                 </ul>
             </div>
@@ -63,6 +63,7 @@
     </nav>
     <br>
     <br>
+    <div class="progress"></div>
     <div class="container-fluid col-10 ">
         <div class="row container-fluid">
             <div class="col-lg-8 col-sm-12">
