added images folder

--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
     <body>
         <meta http-equiv="refresh" content="2;URL=https://abadias618.github.io/Portfolio/landing.html">
         
-        <img class="animate__animated animate__fadeIn" src="logo.png" alt="logo">
+        <img class="animate__animated animate__fadeIn" src="images/logo.png" alt="logo">
     </body>
 </html>
