--- a/r.html
+++ b/r.html
@@ -284,7 +284,7 @@
                                 </div>
                             </div>
                         </div>
-                        <!--END PERSONAL CARD-->
+                        <!--END GAPMINDER CARD-->
                         
                     </div>
                     <div class="row card-row">
