--- a/landing.html
+++ b/landing.html
@@ -571,7 +571,7 @@
                         </div>
                     </div>
                     <!--END BST CARD-->
-                    <!--GAPMINDER CARD-->
+                    <!--SCRIPTURE NLP CARD-->
                     <div class="card">
                         <img class="card-img-top" src="images/shiny_3.png">
                         <div class="card-body">
@@ -639,7 +639,7 @@
                             </div>
                         </div>
                     </div>
-                    <!--END PERSONAL CARD-->
+                    <!--END SCRIPTURE NLP CARD-->
                 </div>
             </div>
 
